docs: Update blog docs
